--- a/ansible.cfg
+++ b/ansible.cfg
@@ -1,5 +1,5 @@
 [defaults]
-inventory = /home/akonnov/LABA/Ansible/hosts.ini
+inventory = ./hosts.ini
 private_key_file=/home/akonnov/.ssh/id_rsa
 command_warnings=False
 host_key_checking = True
