--- a/ansible-roles/create_k8s_cluster/tasks/initializing_claster-workers.yml
+++ b/ansible-roles/create_k8s_cluster/tasks/initializing_claster-workers.yml
@@ -1,3 +1,3 @@
 ---
-  - name: ИНИЦИАЛИЗАЦИЯ КЛАСТЕРА workers
-    shell: "{{ sh_ip_int_br_result.stdout_lines }}"
+  - name: ИНИЦИАЛИЗАЦИЯ КЛАСТЕРА workers | Добавление хостов в кластер
+    shell: "{{ hostvars['k8s-master-1.adk.local']['sh_ip_int_br_result']['stdout'] }}"
